Student review changes: 1. Renamed parameter name in CandidateValidator test(); 2. Optimized findMinEvenNumber(): a) added constants for RuntimeException and REGEX; b) Removed useless replace(); c) optimized stream with flatMap() and orElseThrow(); 3. Optimized selectNenByAge() method;